src/test/ui/issues/issue-50600.stderr
error[E0308]: mismatched types
  --> $DIR/issue-50600.rs:2:13
   |
LL |     fn([u8; |x: u8| {}]),
   |             ^^^^^^^^^^ expected usize, found closure
   |
   = note: expected type `usize`
              found type `[closure@$DIR/issue-50600.rs:2:13: 2:23]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
